refactor(api): replace Stream.collect(Collectors.toList()) with Stream.toList()