@@ -28,7 +28,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @Service
@@ -117,7 +117,7 @@ public class CustomFontService {
         List<CustomFontEntity> fonts = customFontRepository.findByUserId(userId);
         return fonts.stream()
                 .map(customFontMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
